--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
     "type": "git",
     "url": "git://github.com/thenativeweb/wolkenkit-ux.git"
   },
-  "license": "AGPL-3.0"
+  "license": "LGPL-3.0"
 }
