--- a/package.json
+++ b/package.json
@@ -15,22 +15,24 @@
   "main": "src/index.js",
   "dependencies": {
     "classnames": "2.2.5",
-    "jss": "9.0.0-pre.3",
-    "jss-preset-default": "3.0.0",
     "prop-types": "15.5.10",
     "react": "15.6.1",
-    "react-dom": "15.6.1",
-    "react-jss": "7.1.0"
+    "react-dom": "15.6.1"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.5",
     "file-loader": "0.11.2",
-    "react-styleguidist": "6.0.20",
+    "postcss-cssnext": "3.0.2",
+    "postcss-icss-values": "2.0.1",
+    "postcss-loader": "2.0.6",
+    "react-styleguidist": "6.0.21",
     "roboter": "0.15.4",
     "roboter-server": "0.15.4",
+    "style-loader": "0.18.2",
     "webpack": "3.5.5",
     "webpack-dev-server": "2.7.1"
   },
