--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "classnames": "2.2.5",
-    "css-loader": "0.28.5",
+    "css-loader": "0.28.7",
     "file-loader": "0.11.2",
     "postcss-cssnext": "3.0.2",
-    "postcss-icss-values": "2.0.1",
+    "postcss-import": "10.0.0",
     "postcss-loader": "2.0.6",
+    "processenv": "0.1.1",
     "prop-types": "15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
@@ -36,8 +37,18 @@
     "webpack-dev-server": "2.7.1"
   },
   "peerDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.5",
+    "css-loader": "^0.28.7",
+    "file-loader": "^0.11.2",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
     "prop-types": "^15.5.10",
+    "style-loader": "^0.18.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
