--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "roboter": "0.15.4",
     "roboter-server": "0.15.4",
     "style-loader": "0.18.2",
+    "stylelint": "8.0.0",
+    "stylelint-config-standard": "17.0.0",
     "webpack": "3.5.5",
     "webpack-dev-server": "2.7.1"
   },
